syntax = "proto3";

package order;

option go_package = "./proto;proto";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
    string product_id = 1;
    int32 quantity = 2;
    string customer_name = 3;
}

message CreateOrderResponse {
    string order_id = 1;
    string status = 2;
}