syntax = "proto3";

package product;

option go_package = "./proto;proto";

service ProductService {
    rpc GetProductByID (ProductRequest) returns (ProductResponse);
    rpc GetAllProducts (EmptyRequest) returns (ProductListResponse);
    rpc UpdateProductQuantity (UpdateQuantityRequest) returns (UpdateQuantityResponse);
}

message ProductRequest {
    string id = 1;
}

message EmptyRequest{}

message ProductResponse {
    string id = 1;
    string name = 2;
    float price = 3;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

message UpdateQuantityRequest {
    string id = 1;
    int32  quantity = 2;
}

message UpdateQuantityResponse {
    bool success = 1;
}